[package]
name = "pyscemu"
version = "0.7.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyscemu"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
libscemu = "0.17.4"
#libscemu = { path = "/home/sha0/src/libscemu/" }
#libscemu = { path = "/Users/sha0coder/src/libscemu/" }
