[package]
name = "pyscemu"
version = "0.8.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyscemu"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
libscemu = "0.18.3"
#libscemu = { path = "/home/sha0/src/libscemu/" }
#libscemu = { path = "/Users/sha0coder/src/libscemu/" }
#libscemu = { path = "/Users/jesus/src/libscemu/" }
