[package]
name = "pyscemu"
version = "0.9.3"
edition = "2021"
description = "x86 32/64bits and system internals emulator, for securely emulating malware and other stuff."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyscemu"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
env_logger = "0.11.6"
libscemu = "0.19.3"
#libscemu = { path = "/home/sha0/src/libscemu/" }
#libscemu = { path = "/Users/sha0coder/src/libscemu/" }
#libscemu = { path = "/Users/jesus/src/libscemu/" }
